--- a/views/templates/admin/header.html.twig
+++ b/views/templates/admin/header.html.twig
@@ -3,11 +3,11 @@
   <h1 class="d-inline">
     <strong class="text-muted">#1</strong>
     <strong>
-      {{ 'Module name'|trans({}, 'Modules.Extmodulename.Admin') }}
+      {{ 'Sentry'|trans({}, 'Modules.Extsentry.Admin') }}
     </strong>
   </h1>
 
   <span
     class="badge rounded badge-dark ml-2 mr-2 font-size-100"
-  >{{ 'In progress'|trans({}, 'Modules.Extmodulename.Admin') }}</span>
+  >{{ 'In progress'|trans({}, 'Modules.Extsentry.Admin') }}</span>
 </div>
